Finalized fostering life project.

--- a/index.html
+++ b/index.html
@@ -347,14 +347,15 @@
                 </div>
 
                 <div id="project7" class="portfolio-item">
-                    <h2>Fostering Life: Lucius - Audiobook Back Cover</h2>
+                    <h2>Fostering Life: Lucius</h2>
                     <div class="project-meta">
-                        Audio Production • Ambient Sound Design • Narration
+                        Vocal Recording • Ambient Sound Design • Narration
                         Mixing
                     </div>
                     <img
-                        src="assets/img/foster_life_poster.png"
+                        src="https://nomadic.halverneus.workers.dev/foster_life_poster.png"
                         alt="Fostering Life: Lucius Book Cover"
+                        crossorigin="anonymous"
                         style="
                             width: 100%;
                             max-width: 800px;
@@ -365,30 +366,76 @@
                     />
                     <audio
                         controls
-                        src="assets/audio/foster_life.mp3"
+                        src="https://nomadic.halverneus.workers.dev/foster_life.mp3"
                         class="audio-player"
+                        crossorigin="anonymous"
                     ></audio>
                     <p>
-                        For this audiobook project, I crafted an immersive back
-                        cover audio experience that brings the story of
-                        Fostering Life: Lucius to life through strategic sound
-                        design and careful audio mixing. The piece combines the
-                        narrator's compelling voice with ambient soundscapes and
-                        subtle musical elements to create an atmospheric
-                        introduction that captures the emotional depth and tone
-                        of the book.
+                        Nomadic Sound produced all music and audio for the
+                        trailer, using MIDI-based piano, strings, bass, and
+                        ambient textures to create a restrained, narrative-first
+                        score that supports the emotional arc of the story.
                     </p>
+
                     <p>
-                        My work on this project involved blending the recorded
-                        narration with custom ambient textures and background
-                        music, ensuring each element complemented the
-                        storytelling without overwhelming the narrator's
-                        delivery. Through precise EQ, compression, and spatial
-                        effects, I created a cohesive sonic environment that
-                        draws listeners into the world of the story while
-                        maintaining clarity and professional polish throughout
-                        the audio presentation.
+                        Book Title: Fostering Life: Lucius
+                        <br />
+                        Genre: Audiobook
+                        <br />
+                        Author: J. Curewell
+                        <br />
+                        Lead Vocal (Spoken Narration): J. Curewell
+                        <br />
+                        Original Music, Sound Design, & Audio Production:
+                        Nomadic Sound
+                        <br />
+                        Producer: Nomadic Sound
+                        <br />
+                        Audio Engineer: Nomadic Sound
+                        <br />
+                        Recording Studio or Location: Nomadic Sound/Remote /
+                        Home Studio
+                        <br />
+                        Recording Date: December, 2025
+                        <br />
+                        DAW(s): Pro Tools, Ableton Live
+                        <br />
+                        Drums/Percussion: None
+                        <br />
+                        Bass: MIDI bass
+                        <br />
+                        Guitar: None
+                        <br />
+                        Keyboard: MIDI Piano, MIDI Strings
+                        <br />
+                        Other Instruments: Ambient textures, Sound design
+                        elements
+                        <br />
+                        Backing Vocals: None
                     </p>
+                    <div class="picture-grid">
+                        <div class="picture-item">
+                            <img
+                                src="https://nomadic.halverneus.workers.dev/master_bus_limiter.png"
+                                alt="Master Bus Limiter"
+                                crossorigin="anonymous"
+                            />
+                        </div>
+                        <div class="picture-item">
+                            <img
+                                src="https://nomadic.halverneus.workers.dev/master_track_meter.png"
+                                alt="Master Track Meter"
+                                crossorigin="anonymous"
+                            />
+                        </div>
+                        <div class="picture-item">
+                            <img
+                                src="https://nomadic.halverneus.workers.dev/master_track_plugins.png"
+                                alt="Master Track Plugins"
+                                crossorigin="anonymous"
+                            />
+                        </div>
+                    </div>
                 </div>
 
                 <div id="project6" class="portfolio-item">
